--- a/inquiry.html
+++ b/inquiry.html
@@ -18,13 +18,17 @@
                 </div>
             </div>
             <div class="explation_Ptextarea">
-                <p>작품에서 발견한 오류를 적어주세요. <br>빠르게 해결할게요.</p>
+                <p>작품에서 발견한 버그를 적어주세요. <br>빠르게 해결할게요.</p>
                 <form action="#">
-                    <textarea class="textarea" cols="30" rows="10" rows={1}></textarea>
+                    <textarea class="textarea" cols="30" rows="10" rows={1}>자세하게 적어주시면 더욱 빠르게 버그를 고칠 수 있어요!</textarea>
                 </form>
-                <form action="#">
-                    <button type="submit">전송</button>
-                </form>
+                <div class="explation_but_container">
+                    <form action="#">
+                        <button type="submit" class="explation_but">
+                            <p> 전송</p>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
