--- a/inquiry.html
+++ b/inquiry.html
@@ -17,20 +17,20 @@
                 <h1 class="FSb MG0" >버그 신고</h1>
                 <p class="FSe MG0">작품에서 발견한 버그를 적어주세요. <br>빠르게 해결할게요.</p>
             </div>
+
             <div class="menucontainer">
                 <div x-data="{ open: false }" x-on:click.outside="open = false">
-                    <button x-on:click="open = !open">My Account</button>
-                    <ul x-show="open">
+                    <button x-on:click="open = !open" class="menubutton">My Account</button>
+                    <ul x-show="open" class="workscontainer">
                         <li><a href="#">Edit Profile</a></li>
                         <li><a href="#">Settings</a></li>
                         <li><a href="#">Log Out</a></li>        
                     </ul>
-                    <span :class="{'rotated': open}">&raquo;</span>
+                    <!-- <span :class="{'rotated': open}">&raquo;</span> -->
                 </div>
             </div>
+
             <form action="#">
-
-
                 <div class="textcontainer">
                     <textarea cols="30" rows="10" placeholder="자세하게 적어주시면 더욱 빠르게 버그를 고칠 수 있어요!" class="textarea2"></textarea>
                 </div>
