--- a/inquiry.html
+++ b/inquiry.html
@@ -20,12 +20,14 @@
 
             <div class="menucontainer">
                 <div x-data="{ open: false }" x-on:click.outside="open = false">
-                    <button x-on:click="open = !open" class="menubutton">My Account</button>
-                    <ul x-show="open" class="workscontainer">
-                        <li><a href="#">Edit Profile</a></li>
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Log Out</a></li>        
-                    </ul>
+                    <button x-on:click="open = !open" class="menubutton">선택하기</button>
+                    <div class="positionrelative">
+                        <ul x-show="open" class="workscontainer">
+                            <li><a href="#">Edit Profile</a></li>
+                            <li><a href="#">Settings</a></li>
+                            <li><a href="#">Log Out</a></li>        
+                        </ul>
+                    </div>
                     <!-- <span :class="{'rotated': open}">&raquo;</span> -->
                 </div>
             </div>
